--- a/scss/_C-navs.scss
+++ b/scss/_C-navs.scss
@@ -438,6 +438,7 @@
       z-index: 1;
 
       #navMobContent {
+        visibility: hidden;
         display: flex;
         flex-direction: column;
         row-gap: 40px;
