--- a/scss/_B-container.scss
+++ b/scss/_B-container.scss
@@ -8,37 +8,305 @@
 
   #backToTopFunction {
     display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-    width: 81px;
-    align-items: center;
+    flex-direction: column-reverse;
+    row-gap: 5px;
+    width: fit-content;
+    height: fit-content;
+    // align-items: center;
     position: fixed;
     bottom: 20px;
     right: 20px;
-    padding: 10px;
-    border-radius: 50%;
-    background-color: #1d1d1d;
-    opacity: 0;
-    z-index: -1;
+    opacity: 1;
+    z-index: 1;
     cursor: pointer;
 
-    &:hover {
-      background-color: #4b4b4b;
-      box-shadow: 0px 0px 20px 1px #4d8b55;
+    #goToButton {
+      display: flex;
+      flex-direction: column;
+      row-gap: 5px;
+      align-items: center;
+      align-self: end;
+      width: 81px;
+      padding: 10px;
+      border-radius: 5px;
+      background-color: #1d1d1d;
+
+      &:hover {
+        background-color: #4b4b4b;
+      }
+
+      #oneArrow {
+        font-size: 11px;
+        font-weight: 500;
+        color: #cacaca;
+      }
+
+      #two {
+        font-size: 11px;
+        font-weight: 500;
+        color: #cacaca;
+        text-transform: uppercase;
+      }
     }
 
-    #pic {
-      width: 35px;
-      height: 35px;
-      background-image: url('../images/svgs/backToTop.svg');
-      background-repeat: no-repeat;
+    .goToContentsVisible {
+      visibility: visible;
+      z-index: 1;
+      opacity: 1;
+      display: flex;
+      flex-direction: column;
+      row-gap: 5px;
+      align-items: baseline;
+      padding: 5px;
+      background-color: #1d1d1d;
+      border-radius: 5px;
+
+      #goToTopOne {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToTopThree {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToMidOne {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToMidTwo {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToMidThree {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToMidFour {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToBottomOne {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToBottomTwo {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToBottomThree {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
     }
 
-    p {
-      font-size: 11px;
-      font-weight: 500;
-      color: #cacaca;
-      text-transform: uppercase;
+    .goToContents {
+      visibility: hidden;
+      z-index: 0;
+      opacity: 0;
+      display: flex;
+      flex-direction: column;
+      row-gap: 5px;
+      align-items: baseline;
+      padding: 5px;
+      background-color: #1d1d1d;
+      border-radius: 5px;
+
+      #goToTopOne {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToTopThree {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToMidOne {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToMidTwo {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToMidThree {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToMidFour {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToBottomOne {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToBottomTwo {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
+
+      #goToBottomThree {
+        width: 100%;
+        padding: 10px;
+        font-size: 11px;
+        color: #cacaca;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        &:hover {
+          background-color: #4b4b4b;
+        }
+      }
     }
   }
 }
