--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column-reverse;
   row-gap: 5px;
-  width: fit-content;
+  width: 250px;
   height: fit-content;
   position: fixed;
   bottom: 20px;
